force-app/main/default/objects/Email_SMS_Template__c/Email_SMS_Template__c.object-meta.xml
<CustomObject>
    <description>Change Request - ICF</description>
    <label>Email &amp; SMS Template</label>
    <nameField>
        <label>Email &amp; SMS Template No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email &amp; SMS Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>