force-app/main/default/objects/Email_SMS_Template__c/fields/Detail_Link__c.field-meta.xml
<CustomField>
    <fullName>Detail_Link__c</fullName>
    <defaultValue>&quot;[SURVEY_LINK]&quot;</defaultValue>
    <label>Detail Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>