force-app/main/default/objects/Email_SMS_Template__c/fields/Format_Data__c.field-meta.xml
<CustomField>
    <fullName>Format_Data__c</fullName>
    <label>Format Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[CONTACT_NAME]</fullName>
            </value>
            <value>
                <fullName>[SURVEY_LINK]</fullName>
            </value>
            <value>
                <fullName>[CASE_NUMBER]</fullName>
            </value>
            <value>
                <fullName>[CASE_SUBJECT]</fullName>
            </value>
            <value>
                <fullName>[POLICY_NO]</fullName>
            </value>
            <value>
                <fullName>[SHORT_URL]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>