force-app/main/default/objects/Email_SMS_Template__c/fields/Master_Template__c.field-meta.xml
<CustomField>
    <fullName>Master_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Template</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Template</relationshipLabel>
    <relationshipName>Email_SMS_Template</relationshipName>
    <type>Lookup</type>
</CustomField>