force-app/main/default/objects/Email_SMS_Template__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>No</label>
    <type>AutoNumber</type>
</CustomField>