force-app/main/default/objects/Email_SMS_Template__c/validationRules/Validate_OnlyOwnerCanEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_OnlyOwnerCanEdit</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id != OwnerId</errorConditionFormula>
    <errorMessage>You are cannot edit</errorMessage>
</ValidationRule>