force-app/main/default/objects/Email_SMS_Template__c/listViews/All_AFI_Reminder_CMU.listView-meta.xml
<ListView>
    <fullName>All_AFI_Reminder_CMU</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity__c</columns>
    <columns>Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AFI,ALI</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Reminder CMU</value>
    </filters>
    <label>All - AFI - Reminder CMU</label>
    <language>en_US</language>
</ListView>