force-app/main/default/objects/Email_SMS_Template__c/listViews/All_AMFS.listView-meta.xml
<ListView>
    <fullName>All_AMFS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity__c</columns>
    <columns>Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All - AMFS</label>
    <language>en_US</language>
</ListView>