force-app/main/default/objects/Email_SMS_Template__c/listViews/All_MAGI.listView-meta.xml
<ListView>
    <fullName>All_MAGI</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity__c</columns>
    <columns>Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>MAGI</value>
    </filters>
    <label>All - MAGI</label>
    <language>en_US</language>
</ListView>