force-app/main/default/objects/Email_SMS_Template__c/listViews/ICF_NON_CCC_AMFS.listView-meta.xml
<ListView>
    <fullName>ICF_NON_CCC_AMFS</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>Non-CCC</value>
    </filters>
    <label>ICF NON CCC AMFS</label>
    <language>en_US</language>
</ListView>